--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Ethics'
 - !lcc 'B'
+- GITenberg
 title: Ηθικά Νικομάχεια, Τόμος Πρώτος
 url: http://www.gutenberg.org/ebooks/28626
